@@ -1451,6 +1451,10 @@ $user: User object
 'UserToggles': called when initialising User::$mToggles, use this to add new toggles
 $toggles: array of toggles to add
 
+'WantedPages::getSQL': called in WantedPagesPage::getSQL(), can be used to alter the SQL query which gets the list of wanted pages
+&$wantedPages: WantedPagesPage object
+&$sql: raw SQL query used to get the list of wanted pages
+
 'WatchArticle': before a watch is added to an article
 $user: user that will watch
 $article: article object to be watched
