@@ -31,8 +31,7 @@ class WantedPagesPage extends QueryPage {
 		$dbr = wfGetDB( DB_SLAVE );
 		$pagelinks = $dbr->tableName( 'pagelinks' );
 		$page      = $dbr->tableName( 'page' );
-		return
-			"SELECT 'Wantedpages' AS type,
+		$sql = "SELECT 'Wantedpages' AS type,
 			        pl_namespace AS namespace,
 			        pl_title AS title,
 			        COUNT(*) AS value
@@ -46,6 +45,9 @@ class WantedPagesPage extends QueryPage {
 			 AND pg2.page_namespace != 8
 			 GROUP BY pl_namespace, pl_title
 			 HAVING COUNT(*) > $count";
+
+		wfRunHooks( 'WantedPages::getSQL', array( &$this, &$sql ) );
+		return $sql;
 	}
 
 	/**
